# Nexus

./: .editorconfig  .gitignore  .npmrc  .prettierignore  .vercelignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/api/: .env.example  .vercelignore  Dockerfile  README.md  alembic.ini  nexus.db-shm  package.json  pyproject.toml  requirements.txt  test_out.txt
apps/api/app/: config.py  constants.py  dependencies.py  exceptions.py  lifespan.py  main.py  middleware.py
apps/api/app/ai/: __init__.py  gemini.py  intent.py  output_parser.py  prompt_builder.py  provider.py  schemas.py  service.py
apps/api/app/configs/: laptop.yaml  monitor.yaml  smartphone.yaml
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  answer.py  audit_log.py  catalog_ingestion.py  conversation.py  decision.py  feature_flag.py  feedback.py  insight.py  memory.py  price_observation.py  product.py  question.py  recommendation.py  session.py  share_link.py  user.py
apps/api/app/observability/: __init__.py  config.py  error_reporting.py  logging.py  metrics.py  middleware.py  tracing.py
apps/api/app/repositories/: __init__.py  base.py  decision_repo.py  decision_repo_impl.py  (+5 more)
apps/api/tests/: debug_frozen_failures.py  debug_validation.py  measure_latency_breakdown.py  test_benchmark_diag.py  test_e2e_product_qa.py  test_explanation_faithfulness.py  test_pipeline.py  test_recommendation_validation.py  test_stability.py  test_stability_and_responsiveness.py  test_verification_scenarios.py  verify_recommendations.py
(+108 files in other folders)
